src/test/deca/syntax/invalid/obtained_res/wrongAssignsynt.res
./src/test/deca/syntax/invalid/created/RecognitionErrors/wrongAssign.deca:9:6: missing ';' at '10'
